complete auto-login

--- a/app/views/apis/imsi_ecgi.xml.erb
+++ b/app/views/apis/imsi_ecgi.xml.erb
@@ -1,4 +1,4 @@
-<?xml version="1.0" encodiing="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <BODY>
 <IP><%= @api.ip %></IP>
 <IMSI><%= @api.imsi %></IMSI>
