--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,37 +1,93 @@
-<h1>Listing users</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>User name</th>
-      <th>Phone no</th>
-      <th>Imsi</th>
-      <th>Ecgi</th>
-      <th>Description</th>
-      <th>Profile img</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+<nav class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="#">WARP Community</a>
+  </div>
 
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.user_name %></td>
-        <td><%= user.phone_no %></td>
-        <td><%= user.imsi %></td>
-        <td><%= user.ecgi %></td>
-        <td><%= user.description %></td>
-        <td><%= user.profile_img %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav">
+      <li><a href="message.html">Message</a></li>
+      <li><a href="users.html">User</a></li>
+      <li><a href="search.html">Search</a></li>
+      <li><a href="setting.html">Setting</a></li>
+    </ul>
+  </div><!-- /.navbar-collapse -->
+</nav>
+<div class="nav-padding"></div>
 
-<br>
+<div class="bs-example">
+  <div class="btn-group btn-group-justified">
+    <a class="btn btn-primary" role="button" id="tab_btn_followers" data-target="#tab_content_followers">Followers</a>
+    <a class="btn btn-default" role="button" id="tab_btn_not-followers" data-target="#tab_content_not-followers">Not Followers</a>
+    <a class="btn btn-default" role="button" id="tab_btn_cafes" data-target="#tab_content_cafes">Cafes</a>
+  </div>
+</div>
 
-<%= link_to 'New User', new_user_path %>
+<!-- follower list -->
+<div class="container" id="tab_content_followers">
+  <% @users[:followers].each do |user| %>
+    <div class="row">
+      <div class="col-xs-4">
+        <a href="user.html">
+          <img style="width:100%;height:100px;" src="http://fmkorea.net/files/attach/images/3655109/494/914/033/de229fde613990d128d9b5c4c7f8455c.jpg" alt="....">
+        </a>
+      </div>
+      <div class="col-xs-7 well" style="vertical-align:middle;"><p >안녕하세요~ 저는 누구누구입니다. 어디어디 살구요. 무엇무엇 좋아해요 반가워요~</p></div>
+    </div>
+    <div class="row">
+        <div class="col-xs-4" style="text-align:center;"><a href="user.html" align="center"><em id="user_id_<%=user.id%>"><%= user.user_name %></em></a></div>
+        <div class="col-xs-8">Follower <span class="badge"><%= user.relations.count %></span></div>
+    </div>
+    <div class="row"><div class="col-xs-12"><hr></div></div>
+  <% end %>
+  <br/>
+</div>
+
+<!-- not_follower list -->
+<div class="container" id="tab_content_not-followers">
+  <% @users[:not_followers].each do |user| %>
+    <div class="row">
+      <div class="col-xs-4">
+        <a href="user.html">
+          <img style="width:100%;height:100px;" src="http://fmkorea.net/files/attach/images/3655109/494/914/033/de229fde613990d128d9b5c4c7f8455c.jpg" alt="....">
+        </a>
+      </div>
+      <div class="col-xs-7 well" style="vertical-align:middle;"><p >안녕하세요~ 저는 누구누구입니다. 어디어디 살구요. 무엇무엇 좋아해요 반가워요~</p></div>
+    </div>
+    <div class="row">
+        <div class="col-xs-4" style="text-align:center;"><a href="user.html" align="center"><em id="user_id_<%=user.id%>"><%= user.user_name %></em></a></div>
+        <div class="col-xs-8">Follower <span class="badge"><%= user.relations.count %></span></div>
+    </div>
+    <div class="row"><div class="col-xs-12"><hr></div></div>
+  <% end %>
+  <br/>
+</div>
+
+<!-- cafe list -->
+<div class="container" id="tab_content_cafes">
+  <% @users[:cafes].each do |user| %>
+    <div class="row">
+      <div class="col-xs-4">
+        <a href="user.html">
+          <img style="width:100%;height:100px;" src="http://fmkorea.net/files/attach/images/3655109/494/914/033/de229fde613990d128d9b5c4c7f8455c.jpg" alt="....">
+        </a>
+      </div>
+      <div class="col-xs-7 well" style="vertical-align:middle;"><p >안녕하세요~ 저는 누구누구입니다. 어디어디 살구요. 무엇무엇 좋아해요 반가워요~</p></div>
+    </div>
+    <div class="row">
+        <div class="col-xs-4" style="text-align:center;"><a href="user.html" align="center"><em id="user_id_<%=user.id%>"><%= user.user_name %></em></a></div>
+        <div class="col-xs-8">Follower <span class="badge"><%= user.relations.count %></span></div>
+    </div>
+    <div class="row"><div class="col-xs-12"><hr></div></div>
+  <% end %>
+  <br/>
+</div>
+      
