--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -43,7 +43,7 @@
       <div class="col-xs-7 well" style="vertical-align:middle;"><p >안녕하세요~ 저는 누구누구입니다. 어디어디 살구요. 무엇무엇 좋아해요 반가워요~</p></div>
     </div>
     <div class="row">
-        <div class="col-xs-4" style="text-align:center;"><a href="user.html" align="center"><em id="user_id_<%=user.id%>"><%= user.user_name %></em></a></div>
+        <div class="col-xs-4" style="text-align:center;"><a href="user.html" align="center"><em id="user_id_<%=user.id%>" value="user_id_<%=user.id%>"><%= user.user_name %></em></a></div>
         <div class="col-xs-8">Follower <span class="badge"><%= user.relations.count %></span></div>
     </div>
     <div class="row"><div class="col-xs-12"><hr></div></div>
@@ -63,7 +63,7 @@
       <div class="col-xs-7 well" style="vertical-align:middle;"><p >안녕하세요~ 저는 누구누구입니다. 어디어디 살구요. 무엇무엇 좋아해요 반가워요~</p></div>
     </div>
     <div class="row">
-        <div class="col-xs-4" style="text-align:center;"><a href="user.html" align="center"><em id="user_id_<%=user.id%>"><%= user.user_name %></em></a></div>
+        <div class="col-xs-4" style="text-align:center;"><a href="user.html" align="center"><em id="user_id_<%=user.id%>" value="user_id_<%=user.id%>"><%= user.user_name %></em></a></div>
         <div class="col-xs-8">Follower <span class="badge"><%= user.relations.count %></span></div>
     </div>
     <div class="row"><div class="col-xs-12"><hr></div></div>
@@ -83,7 +83,7 @@
       <div class="col-xs-7 well" style="vertical-align:middle;"><p >안녕하세요~ 저는 누구누구입니다. 어디어디 살구요. 무엇무엇 좋아해요 반가워요~</p></div>
     </div>
     <div class="row">
-        <div class="col-xs-4" style="text-align:center;"><a href="user.html" align="center"><em id="user_id_<%=user.id%>"><%= user.user_name %></em></a></div>
+        <div class="col-xs-4" style="text-align:center;"><a href="user.html" align="center"><em id="user_id_<%=user.id%>" value="user_id_<%=user.id%>"><%= user.user_name %></em></a></div>
         <div class="col-xs-8">Follower <span class="badge"><%= user.relations.count %></span></div>
     </div>
     <div class="row"><div class="col-xs-12"><hr></div></div>
