--- a/app/views/users/setting.html.erb
+++ b/app/views/users/setting.html.erb
@@ -28,8 +28,11 @@
 </nav>
 <div class="nav-padding"></div>
 
-<!-- picture -->
+<!-- notice -->
 <br/>
+<p id="notice"><%= notice %></p>
+
+<!-- profile -->
 <%= form_for @user, :url => user_path(@user), :method => "put", :html => { :multipart => true } do |form| %>
 <div class="container">
   <div class="row">
@@ -57,7 +60,9 @@
   <div class="row-fluid">
     <div>
       <div class="form-group">
-        <div class="controls"> 
+        <div class="controls">
+            <%= form.text_field :user_name, :readonly => true %> <br>
+            <%= form.text_field :phone_no, :readonly => true %> <br>
           <%= form.text_area :description,:class=> 'form-control', :rows => '5' ,:maxlength =>140 %> <br>
           <%= form.submit :class=> "btn pull-right btn-primary" %>
         </div>
