ajax in progress

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,3 +4,11 @@ $nav-padding:50px;
 	height:$nav-padding;
 }
 
+.border-right{
+	border-right: 1px solid;
+}
+
+
+.border-left{
+	border-left: 1px solid;
+}
