--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,28 @@
-<h1>Editing user</h1>
+<!-- <h1>Editing user</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @user %> |
 <%= link_to 'Back', users_path %>
+ -->
+<head>
+  <title>WARP Community</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<div class="container">
+	<div class="row">
+	  <div class="col-md-9">
+	    Level 1: .col-md-9
+	    <div class="row">
+	      <div class="col-md-6">
+	        Level 2: .col-md-6
+	      </div>
+	      <div class="col-md-6">
+	        Level 2: .col-md-6
+	      </div>
+	    </div>
+	  </div>
+	</div>
+</div>
