--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,38 +1,10 @@
-<head>
-  <title>WARP Community</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
- 
-<nav class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
-  <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="#">Users</a>
-  </div>
-
-  <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav">
-      <li><a href="message.html">Message</a></li>
-      <li><a href="users.html">User</a></li>
-      <li><a href="search.html">Search</a></li>
-      <li><a href="setting.html">Setting</a></li>
-    </ul>
-  </div><!-- /.navbar-collapse -->
-</nav>
-<div class="nav-padding"></div>
-
+<%= render "/shared/common_header", title: "Users"%>
 <div class="btn-group btn-group-justified">
-  <a class="btn <%= @tab_class[:followers] %>" role="button" id="tab_btn_followers" href="/users?tab=followers">Followers</a>
-  <a class="btn <%= @tab_class[:not_followers] %>" role="button" id="tab_btn_not_followers"  href="/users?tab=not_followers">Not Followers</a>
+  <a class="btn <%= @tab_class[:followers] %>" role="button" id="tab_btn_followers" href="/users?tab=followers">Friends</a>
+  <a class="btn <%= @tab_class[:not_followers] %>" role="button" id="tab_btn_not_followers"  href="/users?tab=not_followers">Users</a>
   <a class="btn <%= @tab_class[:cafes] %>" role="button" id="tab_btn_cafes" href="/users?tab=cafes">Cafes</a>
 </div>
+<br/>
 
 <!-- follower list -->
 <div class="container" id="content_users">
@@ -53,7 +25,7 @@
             </em>
           </a>
         </div>
-        <div class="col-xs-8">Follower <span class="badge"><%= user.relations.count %></span></div>
+        <div class="col-xs-8">Follower <span class="badge"><%= User.my_followers_count(user) %></span></div>
     </div>
     <div class="row"><div class="col-xs-12"><hr></div></div>
   <% end %>
