--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -15,7 +15,7 @@
       <div class="col-xs-7 well" style="vertical-align:middle;">
         <p><%=message.message%></p>
         <%if message.attached_img_file_name %>
-          <%= image_tag message.attached_img.url(:medium) %>
+          <%= image_tag message.attached_img.url(:medium), :width => "100%" %>
         <%end%>
       </div>
     </div>
