--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -37,13 +37,16 @@
     </div>
   </div>
 
-
+<button type="button" class="btn btn-default btn-lg">
+  <span class="glyphicon glyphicon-star"></span> Star
+</button>
 
   <div class="container">
     <div class="row-fluid">
       <div>
         <div class="form-group">
           <div class="controls">
+
             <%= form.submit :class=> "btn pull-right btn-primary" %>
           </div>
         </div>
