--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -37,28 +37,15 @@
     </div>
   </div>
 
-
-
-
-<div class="container">
-    <div class="col-md-10">
-        <div class='well'>
-            <div class="form-group">
-                <div class='input-group date' id='datetimepicker1'>
-                    <input type='text' class="form-control" />
-                    <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
-                    </span>
-                </div>
-            </div>
-        </div>
-        <script type="text/javascript">
-            $(function () {
-                $('#datetimepicker1').datetimepicker();
-            });
-        </script>
+  <div class="container">
+    <div class="row">
+      <div class='input-group date' id='datetimepicker'>
+        <input type='text' class="form-control" name="temp_time" placeholder="유효기간" data-format="YYYY/MM/DD HH:mm:ss"/>
+        <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
+        </span>
+      </div>
     </div>
-</div>
-
+  </div>
 
 
   <div class="container">
