--- a/app/views/shared/_common_header.html.erb
+++ b/app/views/shared/_common_header.html.erb
@@ -21,7 +21,7 @@
     <ul class="nav navbar-nav">
       <li><a href="/messages">Message</a></li>
       <li><a href="/users">User</a></li>
-      <li><a href="http://newbiz.uangel.com/comm_dev/search.html">Search</a></li>
+      <li><a href="/search">Search</a></li>
       <li><a href="/setting">Setting</a></li>
     </ul>
   </div><!-- /.navbar-collapse -->
