--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -21,7 +21,7 @@
       <div class="col-xs-10 text-center">
         <div class="fileinput fileinput-new" data-provides="fileinput">
           <div class="fileinput-new thumbnail">
-            <img class="img-responsive" alt="...">
+            <img class="img-responsive" alt="">
           </div>
           <div class="fileinput-preview fileinput-exists thumbnail" style="max-width: 200px; max-height: 200px;"></div>
           <div>
@@ -39,11 +39,15 @@
 
   <div class="container">
     <div class="row">
-      <div class='input-group date' id='datetimepicker'>
-        <%= form.text_field :expired_at ,:placeholder=>"유효기간",:class=>"form-control" ,"data-format"=>"YYYY/MM/DD HH:mm:ss"%>
-        <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
-        </span>
+      <div class="col-xs-1"></div>
+      <div class="col-xs-10">
+        <div class='input-group date' id='datetimepicker'>
+          <%= form.text_field :expired_at ,:placeholder=>"새글 만료일시",:class=>"form-control" ,"data-format"=>"YYYY/MM/DD HH:mm:ss"%>
+          <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
+          </span>
+        </div>
       </div>
+      <div class="col-xs-1"></div>
     </div>
   </div>
 
@@ -53,7 +57,6 @@
       <div>
         <div class="form-group">
           <div class="controls">
-
             <%= form.submit :class=> "btn pull-right btn-primary" %>
           </div>
         </div>
