--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -37,6 +37,7 @@
     </div>
   </div>
 
+  <% if @current_user.user_type %>
   <div class="container">
     <div class="row">
       <div class="col-xs-1"></div>
@@ -50,7 +51,7 @@
       <div class="col-xs-1"></div>
     </div>
   </div>
-
+  <% end %>
 
   <div class="container">
     <div class="row-fluid">
