--- a/app/views/users/setting.html.erb
+++ b/app/views/users/setting.html.erb
@@ -31,6 +31,10 @@
         <div class="controls">
             <%= form.text_field :user_name, :readonly => true %> <br>
             <%= form.text_field :phone_no, :readonly => true %> <br>
+            <% if @user.user_type %>
+              <%= form.text_field :expire_day, :class=> 'form_control' %><br>
+              <%= form.text_field :expire_hour, :class=> 'form_control' %><br>
+            <% end %>
           <%= form.text_area :description,:class=> 'form-control', :rows => '5' ,:maxlength =>140 %> <br>
           <%= form.submit :class=> "btn pull-right btn-primary" %>
         </div>
