--- a/app/views/sms_notifications/_form.html.erb
+++ b/app/views/sms_notifications/_form.html.erb
@@ -13,55 +13,31 @@
 
   <div class="field">
     <%= f.label :receiver_user_id %><br>
-    <%= f.text_field :receiver_user_id %>
-  </div>
-  <div class="field">
-    <%= f.label :integer %><br>
-    <%= f.text_field :integer %>
+    <%= f.number_field :receiver_user_id %>
   </div>
   <div class="field">
     <%= f.label :sms_message %><br>
-    <%= f.text_field :sms_message %>
-  </div>
-  <div class="field">
-    <%= f.label :text %><br>
-    <%= f.text_field :text %>
+    <%= f.text_area :sms_message %>
   </div>
   <div class="field">
     <%= f.label :receiver_phone_no %><br>
     <%= f.text_field :receiver_phone_no %>
   </div>
   <div class="field">
-    <%= f.label :string %><br>
-    <%= f.text_field :string %>
-  </div>
-  <div class="field">
     <%= f.label :event_type %><br>
     <%= f.text_field :event_type %>
   </div>
   <div class="field">
-    <%= f.label :string %><br>
-    <%= f.text_field :string %>
-  </div>
-  <div class="field">
     <%= f.label :sent_at %><br>
-    <%= f.text_field :sent_at %>
-  </div>
-  <div class="field">
-    <%= f.label :datetime %><br>
-    <%= f.text_field :datetime %>
+    <%= f.datetime_select :sent_at %>
   </div>
   <div class="field">
     <%= f.label :status %><br>
     <%= f.text_field :status %>
   </div>
   <div class="field">
-    <%= f.label :string %><br>
-    <%= f.text_field :string %>
-  </div>
-  <div class="field">
     <%= f.label :error_reason %><br>
-    <%= f.text_area :error_reason %>
+    <%= f.text_field :error_reason %>
   </div>
   <div class="actions">
     <%= f.submit %>
