--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -35,3 +35,8 @@ a:hover, a:focus{
 	background-color: #428bca;
 	border-color: #357ebd;
 }
+
+.sign_up_form{
+	background-image: url("/images/singup_bg01.png");
+	background-position: top center;
+}
