--- a/app/views/users/_show_relation.html.erb
+++ b/app/views/users/_show_relation.html.erb
@@ -20,7 +20,7 @@
 <div id="show_relation">
   <%if @tab_class[:profile] == "btn-primary" %>
     <div class="container">
-      <div class="row-fluid">
+      <div class="row">
         <div class="col-xs-1"></div>
         <div class="col-xs-10"><%=@user.description%></div>
         <div class="col-xs-1"></div>
