--- a/app/views/users/setting.html.erb
+++ b/app/views/users/setting.html.erb
@@ -11,6 +11,7 @@
           <%= image_tag @user.avatar.url(:medium) %>
           <!-- <img src="http://4.bp.blogspot.com/-S6gwYPFP_lw/Uow-EhdHOPI/AAAAAAAAnWs/fcrHub2kcS4/s1600/Miss+A+Suzy+%EC%88%98%EC%A7%80+Hush+Teaser.jpg" class="img-responsive" alt="..."> -->
         </div>
+        <div><%= @user.user_name %></div>
         <div class="fileinput-preview fileinput-exists thumbnail" style="max-width: 200px; max-height: 200px;"></div>
         <div>
           <br/>
@@ -29,18 +30,21 @@
     <div>
       <div class="form-group">
         <div class="controls">
+          <!--
             <%= form.text_field :user_name, :readonly => true %> <br>
             <%= form.text_field :phone_no, :readonly => true %> <br>
+          -->
             <% if @user.user_type %>
-              <%= form.text_field :expire_day, :class=> 'form_control' %><br>
-              <%= form.text_field :expire_hour, :class=> 'form_control' %><br>
+              <%= form.text_field :expire_day, :class=> 'form_control' ,:placeholder => '만료일'%><br>
+              <%= form.text_field :expire_hour, :class=> 'form_control',:placeholder => '만료시간' %><br>
             <% end %>
-          <%= form.text_area :description,:class=> 'form-control', :rows => '5' ,:maxlength =>140 %> <br>
+          <%= form.text_area :description,:class=> 'form-control', :rows => '5' ,:maxlength =>140, :placeholder => '자신을 소개해주세요' %> <br>
           <%= form.submit :class=> "btn pull-right btn-primary" %>
         </div>
       </div>
     </div>
   </div>
 </div>
+
 <% end %>
 
