--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -20,6 +20,10 @@
     <%= f.text_field :phone_no %>
   </div>
   <div class="field">
+    Cafe 회원 <br>
+    <%= f.check_box :user_type %>
+  </div>
+  <div class="field">
     <%= f.label :imsi %><br>
     <%= f.text_field :imsi %>
   </div>
