--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New user</h1>
+<head>
+  <title>WARP Community</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
-<%= render 'form' %>
+<body class="sign_up_form">
+	<h1>New user</h1>
 
-<%= link_to 'Back', users_path %>
+	<%= render 'form' %>
+</body>
