--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -4,46 +4,46 @@
 <!-- follower list -->
 <div class="container" id="content_messages">
   <% @messages.each do |message| %>
-    <%= message.user_id %>
     <% user = User.find(message.user_id) %>
     <div class="row">
-      <div class="col-xs-4">
+      <div class="col-xs-3">
         <a href="<%= user_path(user)%>">
-          <%= image_tag user.avatar.url(:medium), :width => "100px",:height => "100px" %>
+          <%= image_tag user.avatar.url(:medium), :width => "100%",:height => "100%", :class => "round_border" %>
         </a>
       </div>
-      <div class="col-xs-7 well" style="vertical-align:middle;">
-        <%= user.user_name %>
+      <div class="col-xs-9" style="vertical-align:middle;">
+        <span class="user_name">
+          <%= user.user_name %>
+        </span>        
         <% if user.user_type %>
-          &nbsp;<span class="badge">Cafe</span>
+          <span class="cafe badge">
+            Cafe
+          </span>
         <% end %>
-
         <% if Message.check_unread_and_make_it_read(message,@current_user) %>
-          &nbsp;<span class="badge">New</span>
+          <span class="new badge">
+            N
+          </span>
         <% end %>
-        <br/>
-        <%= message.created_at %>
-        <p><%=message.message%></p>
-        <%if message.attached_img_file_name %>
-          <%= image_tag message.attached_img.url(:original), :width => "100%" %>
-        <%end%>
-      </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-4" style="text-align:center;">
-          <a href="<%= user_path(user)%>" align="center">
-            <em id="user_id_<%=user.id%>" value="user_id_<%=user.id%>">
-            </em>
-          </a>
+        <div class="message_time">
+          <%= message.created_at.strftime("%Y/%m/%d %I:%M%p") %>
         </div>
-        <div class="col-xs-8">Follower <span class="badge"><%= User.my_followers_count(user) %></span></div>
+        <br/>
+        <div class="message_message" >
+          <%=message.message%>
+          <%if message.attached_img_file_name %>
+            <br/><br/>
+            <%= image_tag message.attached_img.url(:original), :width => "100%" %>
+          <%end%>
+        </div>
+      </div>
     </div>
     <div class="row"><div class="col-xs-12"><hr></div></div>
   <% end %>
   <br/>
   <!-- paging -->
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-12 text-center">
       <%= paginate @messages ,:window => 1%>
       <br/>
     </div>
@@ -52,6 +52,6 @@
 <br/><br/><br/><br/>
 <div class="row-fluid navbar-fixed-bottom btn-group btn-group-justified">
   <div class="navbar-inner navbar-content-center">
-    <%= link_to "Write" , new_message_path, :class => 'btn btn-primary', :role=>'button'%>
+    <%= link_to "Write" , new_message_path, :class => 'btn btn-write', :role=>'button'%>
   </div>
 </div>
