--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -56,3 +56,35 @@ hr{
 	color:#2a8be9;
 	font-size:26px;
 }
+
+/* tab button */
+.btn-tab-default{
+	font-size:20px;
+}
+
+.btn-active{
+	@extend .btn-tab-default;
+	background-color:#ffffff;
+	color:#2a8be9;
+}
+.btn-active:hover{
+	@extend .btn-active;
+}
+
+.btn-deactive{
+	@extend .btn-tab-default;
+	background-color:#2f2f2f;
+	color:#666;
+}
+.btn-deactive:hover{
+	@extend .btn-deactive;
+}
+
+/* gray_color text */
+.gray_color{
+	color:#888888;
+}
+
+a.no_hover:hover{
+	background-color:transparent;
+}
