--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,21 @@
 <%= render "/shared/common_header", title: "User Profile" %>
 
 <!-- profile -->
-<div class="container">
+<div class="container profile_background">
   <div class="row">
-    <div class="col-xs-1"></div>
-    <div class="col-xs-10 text-center">
+    <br/>
+    <div class="col-xs-4"></div>
+    <div class="col-xs-4 text-center">
       <div class="fileinput fileinput-new" data-provides="fileinput">
-        <div class="fileinput-new thumbnail" style="width: 200px; height: 200px;">
-          <%= image_tag @user.avatar.url(:medium) %>
+        <div class="fileinput-new thumbnail" style="width: 100%; height: 100%;">
+          <%= image_tag @user.avatar.url(:medium) ,:class => "round_border" %>
         </div>
       </div>
-      <div><%= @user.user_name %></div>
+      <div class="user_name"><%= @user.user_name %></div>
     </div>
-    <div class="col-xs-1"></div>
+    <div class="col-xs-4"></div>
   </div>
+  <br/>
 </div>
 
 <!-- tab -->
